// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#131722",
        "flex": 1,
        "flexDirection": "column",
        "position": "relative",
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/icons/icons8-box-important-100.png",
      }
    }
    style={
      Object {
        "tintColor": "#fff",
      }
    }
  />
  <View
    style={
      Object {
        "height": 1,
        "left": 0,
        "marginTop": 9,
        "right": 0,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    h3={true}
    style={
      Array [
        Object {
          "textAlign": "center",
        },
        Object {
          "color": "#575563",
        },
      ]
    }
  >
    We can't find that
  </Text>
  <View
    style={
      Object {
        "height": 1,
        "left": 0,
        "marginTop": 19,
        "right": 0,
      }
    }
  />
</View>
`;

exports[`Error w/ Try Again Button renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#131722",
        "flex": 1,
        "flexDirection": "column",
        "position": "relative",
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/icons/icons8-box-important-100.png",
      }
    }
    style={
      Object {
        "tintColor": "#fff",
      }
    }
  />
  <View
    style={
      Object {
        "height": 1,
        "left": 0,
        "marginTop": 9,
        "right": 0,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    h3={true}
    style={
      Array [
        Object {
          "textAlign": "center",
        },
        Object {
          "color": "#575563",
        },
      ]
    }
  >
    Woops, Something went wrong.
  </Text>
  <View
    style={
      Object {
        "height": 1,
        "left": 0,
        "marginTop": 19,
        "right": 0,
      }
    }
  />
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#364150",
        "borderRadius": 0.5,
        "borderWidth": 1.3,
        "height": 30,
        "justifyContent": "center",
        "opacity": 1,
        "padding": 5,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#575563",
            "fontFamily": undefined,
          },
        ]
      }
    >
      TRY AGAIN
    </Text>
  </View>
</View>
`;
